# Jellyfull

./: .gitignore  LICENSE  README.md  iso639-1.tsv  jellyfull.py  maker.py  pyproject.toml  retriever.py
