[project]
name = "Jellyfull"
version = "0.1.0"
description = "Jellyfull is a Python module to help you getting metadata for Jellyfin"
authors = [{"name" = "momo", "email" = "momo_@toke.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
	"requests>=2.26.0"
]

[dependency-groups]
dev = [
	"ruff",
	"mypy"
]
